--- a/index.html
+++ b/index.html
@@ -6,27 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <nav class="navbar">
-      <div class="navbar__flex">
+    <div class="navbar__container">
+      <nav class="navbar">
         <p class="navbar__logo">Header Logo</p>
         <a class="navbar__link" href="#">header link one</a
         ><a class="navbar__link" href="#">header link two</a
         ><a class="navbar__link" href="#">header link three</a>
-      </div>
-    </nav>
-    <header class="header">
-      <div class="header__hero">
-        <h1 class="header__title">This website is awesome</h1>
-        <p class="header__text">
-          This website has some subtext that goes here under the main title.
-          It's a smaller font and the color is lower contrast
-        </p>
-        <button class="header__button">Sign up</button>
-      </div>
-      <img class="header__img" src="http://pokaimg.me/500x250/monkey" alt="" />
-    </header>
+      </nav>
+    </div>
+    <div class="header__container">
+      <header class="header">
+        <div class="header__hero">
+          <h1 class="header__title">This website is awesome</h1>
+          <p class="header__text">
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast
+          </p>
+          <button class="header__button">Sign up</button>
+        </div>
+        <img
+          class="header__img"
+          src="http://pokaimg.me/500x250/monkey"
+          alt=""
+        />
+      </header>
+    </div>
     <main class="main">
       <div class="cards">
         <h2 class="cards__title">Some random information.</h2>
