added important monkey

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         </div>
         <img
           class="header__img"
-          src="http://pokaimg.me/500x250/monkey"
-          alt=""
+          src="http://pokaimg.me/500x250/monkey?text=monkey"
+          alt="monkey"
         />
       </header>
     </div>
@@ -44,25 +44,41 @@
         <h2 class="cards__title">Some random information.</h2>
         <div class="cards__container">
           <div class="cards__card">
-            <img class="cards__img" src="" alt="" />
+            <img
+              class="cards__img"
+              src="http://pokaimg.me/180x180/monkey?text=monkey"
+              alt="monkey"
+            />
             <p class="cards__text">
               this is some subtext under an ilustration or image
             </p>
           </div>
           <div class="cards__card">
-            <img class="cards__img" src="" alt="" />
+            <img
+              class="cards__img"
+              src="http://pokaimg.me/180x180/monkey?text=monkey?"
+              alt="monkey"
+            />
             <p class="cards__text">
               this is some subtext under an ilustration or image
             </p>
           </div>
           <div class="cards__card">
-            <img class="cards__img" src="" alt="" />
+            <img
+              class="cards__img"
+              src="http://pokaimg.me/180x180/monkey?text=monkey!"
+              alt="monkey"
+            />
             <p class="cards__text">
               this is some subtext under an ilustration or image
             </p>
           </div>
           <div class="cards__card">
-            <img class="cards__img" src="" alt="" />
+            <img
+              class="cards__img"
+              src="http://pokaimg.me/180x180/monkey?text=monkey."
+              alt="monkey"
+            />
             <p class="cards__text">
               this is some subtext under an ilustration or image
             </p>
@@ -73,7 +89,7 @@
         <blockquote class="quote__text">
           This is an inspiring quote, or a testimonial from a customer. Maybe
           it's just filling up space, or maybe people will actually read it. Who
-          knows? All I know is that it looks nice.
+          knows? All I know is that it looks monkey.
         </blockquote>
         <p class="quote__cite">-Thor, god of Thunder</p>
       </div>
